# factorio-learning-environment

./: pyproject.toml
fle/env/: game_types.py
fle/env/atomic_env/: __init__.py  constants.py  environment.py
fle/env/gym_env/: environment.py  registry.py
fle/env/protocols/_mcp/: state.py
fle/env/tools/agent/send_message/: client.py
fle/eval/analysis/: run_to_mp4.py
fle/eval/entrypoints/: gym_eval.py
fle/eval/inspect/integration/: solver.py  solver_variants.py
fle/eval/tasks/: coal_mining_task.py
rl_training/: config.py  networks.py  ppo.py  train.py
